--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,6 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
+  --ion-font-size-base: 5px;
   --ion-color-primary: #9e1C25;;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
