--- a/src/app/inventory-form/inventory-form.page.html
+++ b/src/app/inventory-form/inventory-form.page.html
@@ -67,12 +67,13 @@
             </ion-item>
           </div>
           <div>
-            <ion-label position="floating" class="floating-label">Ending Balance<span
-                class="mandatory">*</span></ion-label>
+            <ion-label position="floating" class="floating-label">
+              Ending Balance<span class="mandatory">*</span>
+            </ion-label>
             <ion-item lines="none" class="input-container">
-              <ion-input formControlName="endingBalance" type="number" class="bordered-input"></ion-input>
+              <ion-input formControlName="endingBalance" type="number" class="bordered-input" readonly="true"></ion-input>
             </ion-item>
-          </div>
+          </div>          
           <div>
             <ion-label position="floating" class="floating-label">Quantity Requested <span
                 class="mandatory">*</span></ion-label>
