--- a/src/app/subhome/subhome.page.html
+++ b/src/app/subhome/subhome.page.html
@@ -22,11 +22,11 @@
 <ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-header>
-      <ion-row>
-        <ion-col>
+      <ion-row class="align-center">
+        <ion-col size="6"> 
           <ion-card-title>{{ subcounty }} </ion-card-title>
         </ion-col>
-        <ion-col class="ion-text-end">
+        <ion-col size="6" class="ion-text-end"> 
           <div class="date-selectors">
             <ion-select [(ngModel)]="selectedMonth" interface="popover">
               <ion-select-option *ngFor="let month of months" [value]="month">{{ month }}</ion-select-option>
@@ -44,7 +44,7 @@
       </ion-row>
     </ion-card-header>
   </ion-card>
-
+  
   <ion-card>
     <ion-card-header>
       <ion-row>
