--- a/src/global.scss
+++ b/src/global.scss
@@ -68,11 +68,11 @@
 
 }
 
-.logoimg{
+.logoimg {
     margin: 30px;
     margin-top: 30px;
     height: 200px;
-    
+
 }
 
 .buttons {
@@ -149,16 +149,18 @@
 }
 
 :root {
-  --ion-backdrop-color: #f0f0f0;
+    --ion-backdrop-color: #f0f0f0;
+
+
 }
 
 .notification-icon {
     position: relative;
     font-size: 24px;
     color: #fff;
-  }
-  
-  .badge {
+}
+
+.badge {
     position: absolute;
     top: -5px;
     right: -10px;
@@ -167,5 +169,50 @@
     border-radius: 50%;
     padding: 5px 10px;
     font-size: 12px;
+}
+
+ion-card-title,
+ion-title,
+ion-list,
+ion-row,
+ion-col {
+    font-size: 14px !important;
+}
+
+ion-content p {
+    font-size: 14px !important;
+}
+
+
+ion-content table {
+    font-size: 12px !important; 
+}
+
+ion-content table td,
+ion-content table th {
+    font-size: 10px !important; 
+}
+ion-content h3 {
+    font-size: 14px !important;
+}
+ion-list,
+ion-item,
+ion-label {
+    font-size: 12px !important; 
+}
+ion-toolbar ion-title {
+    font-size: 16px !important; 
+}
+ion-card-header {
+    border-bottom: none !important;
+  }
+  
+  ion-row {
+    border: none !important;
+  }
+  
+  ion-col {
+    border: none !important;
+    padding: 0 !important;
   }
   
