--- a/src/app/inventory-approval/inventory-approval.page.scss
+++ b/src/app/inventory-approval/inventory-approval.page.scss
@@ -73,7 +73,7 @@
   }
   
   .expanded-card {
-    height: 10%; 
+    height: 20%; 
   }
   ion-select {
     z-index: 1000; 
@@ -101,14 +101,57 @@
     font-size: medium;
     font-weight: bold;
   }
-  .expand{
-    height: 10%; 
   
+  .warning-text {
+    color: red;
+    font-weight: 500;
+    margin-top: 0px;
   }
-  .ex{
-    height: 4%;
+  
+  .fixed-header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: white;
   }
-  .row{
-    margin-left: 5%;
-    margin-top: 2%;
+  
+  .scrollable-content {
+    padding-top: 10px; 
   }
+
+  @media print {
+    /* Hide everything except the main content you want to print */
+    ion-header, .print-exclude {
+      display: none !important; /* Hides header and buttons */
+    }
+  
+    ion-content {
+      display: block !important; /* Ensures the content is displayed */
+    }
+  
+    /* Style the printed report */
+    .print-report {
+      page-break-after: always; /* Adds page breaks if needed */
+      font-family: Arial, sans-serif; /* Use a clean font for printing */
+      margin: 20px; /* Adds margin for better readability */
+    }
+  
+    /* Customize table styles for printing */
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    
+    .table, .table th, .table td {
+      border: 1px solid black; /* Adds border for tables */
+      padding: 8px; /* Adds padding for table cells */
+      text-align: left; /* Aligns text to the left */
+    }
+  
+    h3, h4 {
+      margin: 0;
+      padding: 5px 0;
+    }
+  }
+  
