--- a/src/app/inventory-item/inventory-item.page.scss
+++ b/src/app/inventory-item/inventory-item.page.scss
@@ -110,18 +110,13 @@ ion-card {
   font-weight: 500;
   margin-top: 0px;
 }
-// .fixed-header {
-//   position: fixed;
-//   top: 0;
-//   width: 100%;
-//   z-index: 1;
-//   padding-bottom: 15px; 
-// }
-
-// ion-content {
-//   padding-top: 150px; 
-// }
-
-// .expand, .expanded-card {
-//   margin-bottom: 15px; 
-// }
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100; /* Ensure it's above other content */
+}
+.content{
+  padding-top: 220px;
+}
