--- a/src/app/programmes/programmes.page.html
+++ b/src/app/programmes/programmes.page.html
@@ -24,11 +24,10 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-
   <ion-card>
     <ion-card-header>
       <ion-col>
-        <ion-card-title>Family Planning</ion-card-title>
+        <ion-card-title>{{ programmeName }}</ion-card-title>
       </ion-col>
       <ion-col class="ion-text-end date-col">
         <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
@@ -54,21 +53,20 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-
       <ion-list>
         <ion-item *ngFor="let facility of facilities">
           <ion-label>
             {{ facility.facilityName }}
           </ion-label>
-          <ion-label slot="end"> <div class="status-div" [ngClass]="getStatusColor(facility.status)">
-            {{ facility.status }}
-          </div>
+          <ion-label slot="end">
+            <div class="status-div" 
+                 [ngClass]="getStatusColor(facility.status)" 
+                 (click)="navigateToInventoryApproval({ programmeId: programmeId }, facility)">
+              {{ facility.status }}
+            </div>
           </ion-label>
-        </ion-item>
-
+        </ion-item>      
       </ion-list>
     </ion-card-content>
   </ion-card>
-
-
 </ion-content>
