--- a/src/app/subhome/subhome.page.html
+++ b/src/app/subhome/subhome.page.html
@@ -52,20 +52,20 @@
           <ion-card-title class="heading-bold">Programme</ion-card-title>
         </ion-col>
         <ion-col class="ion-text-end">
-          <ion-card-title class="heading-bold">Reporting Rate</ion-card-title>
         </ion-col>
       </ion-row>
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <ion-item *ngFor="let item of programmeData">
-          <ion-label>{{ item.programmeName }}</ion-label>
-          <ion-label slot="end" class="reporting-rate">
-            <ion-icon [name]="getStatusIcon(item.reportingRate)"
-              [color]="getStatusColor(item.reportingRate)"></ion-icon>
-            {{ item.reportingRate | percent:'1.0-2' }}
+        <ion-item *ngFor="let programme of filteredProgrammes">
+          <ion-label>
+            <h2>{{ programme.programmeName }}</h2>
+            <ion-progress-bar [value]="programme.reportingRate"></ion-progress-bar>
+            <p [ngClass]="getStatusColor(programme.reportingRate)"   (click)="navigateToInventoryForm(programme)">
+              Reporting Rate: {{ programme.reportingRate | percent }}
+            </p>
           </ion-label>
-        </ion-item>
+        </ion-item>        
       </ion-list>
     </ion-card-content>
   </ion-card>
