county and national page added

--- a/src/app/counties/counties.page.html
+++ b/src/app/counties/counties.page.html
@@ -1,5 +1,3 @@
-
-
 <ion-content [fullscreen]="true">
   <ion-tabs>
     <ion-tab-bar slot="bottom">
@@ -7,11 +5,8 @@
         <ion-icon name="home-sharp"></ion-icon>
         Home
       </ion-tab-button>
-      <ion-tab-button tab="programmes">
-        <ion-icon name="create-sharp"></ion-icon> Programmes
-      </ion-tab-button>
-      <ion-tab-button tab="stock-reports">
-        <ion-icon name="bar-chart-sharp"></ion-icon> Stock Reports
+      <ion-tab-button tab="county-stock-reports">
+        <ion-icon name="bar-chart-sharp"></ion-icon> Stock Summary
       </ion-tab-button>
       <ion-tab-button tab="profile">
         <ion-icon name="settings-sharp"></ion-icon> Settings
