--- a/src/app/subhome/subhome.page.html
+++ b/src/app/subhome/subhome.page.html
@@ -24,7 +24,7 @@
     <ion-card-header>
       <ion-row class="align-center">
         <ion-col size="6"> 
-          <ion-card-title>{{ subcounty }} </ion-card-title>
+          <ion-card-title class="color">{{ subcounty }} </ion-card-title>
         </ion-col>
         <ion-col size="6" class="ion-text-end"> 
           <div class="date-selectors">
@@ -39,7 +39,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card-subtitle>Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
+          <ion-card-subtitle class="color">Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
         </ion-col>
       </ion-row>
     </ion-card-header>
