--- a/src/app/facilityhome/facilityhome.page.html
+++ b/src/app/facilityhome/facilityhome.page.html
@@ -2,19 +2,22 @@
   <ion-toolbar color="primary">
     <ion-title>Facility Home</ion-title>
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="toggleSearchBar()">
         <ion-icon name="search"></ion-icon>
       </ion-button>
+
       <ion-button (click)="goToNotifications()">
         <ion-icon name="notifications-outline" class="notification-icon"></ion-icon>
         <span class="badge" *ngIf="newNotificationsCount > 0">{{ newNotificationsCount }}</span>
       </ion-button>
+
       <ion-button (click)="toggleMenu()">
         <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-header>
@@ -26,24 +29,29 @@
       </ion-col>
     </ion-card-header>
   </ion-card>
+
   <ion-card>
-    <ion-card-header> 
+    <ion-card-header>
       <ion-row>
         <ion-col>
           <ion-card-title class="heading-bold">Programme</ion-card-title>
         </ion-col>
         <ion-col class="ion-text-end">
-          <ion-card-title class="heading-bold" style="margin-right: 30px;">Status</ion-card-title>
+          <ion-card-title class="heading-bold" >Status</ion-card-title>
         </ion-col>
       </ion-row>
     </ion-card-header>
+    
     <ion-card-content>
+      <ion-toolbar *ngIf="showSearchBar" color="light">
+        <ion-searchbar [(ngModel)]="searchStatus" (ionInput)="filterProgrammesByStatus()" placeholder="Search by status"></ion-searchbar>
+      </ion-toolbar>
+
       <ion-list>
-        <ion-item *ngFor="let program of programmes">
+        <ion-item *ngFor="let program of filterProgrammes.length > 0 ? filterProgrammes : programmes">
           <ion-label ion-text-wrap>{{ program.programmeName }}</ion-label>
           <ion-label slot="end">
-            <div class="status-div" [ngClass]="getStatusColor(program.status)"
-              (click)="navigateToInventoryForm(program)">
+            <div class="status-div" [ngClass]="getStatusColor(program.status)" (click)="navigateToInventoryForm(program)">
               {{ program.status }}
             </div>
           </ion-label>
