--- a/src/app/facilitystockreports/facilitystockreports.page.html
+++ b/src/app/facilitystockreports/facilitystockreports.page.html
@@ -21,6 +21,31 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
+  <ion-content [fullscreen]="true">
+    <ion-card>
+      <ion-card-header>
+        <ion-row class="align-center">
+          <ion-col size="6"> 
+            <ion-card-title>{{ facilityName }}</ion-card-title>
+          </ion-col>
+          <ion-col size="6" class="ion-text-end"> 
+            <div class="date-selectors">
+              <ion-select [(ngModel)]="selectedMonth" interface="popover" style="margin-right: 8px;">
+                <ion-select-option *ngFor="let month of months" [value]="month">{{ month }}</ion-select-option>
+              </ion-select>
+              <ion-select [(ngModel)]="selectedYear" interface="popover">
+                <ion-select-option *ngFor="let year of years" [value]="year">{{ year }}</ion-select-option>
+              </ion-select>
+            </div>
+          </ion-col>
+        </ion-row>        
+        <ion-row>
+          <ion-col>
+            <ion-card-subtitle class="color">Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+    </ion-card>
   <ion-card>
     <ion-card-header> 
       <ion-row>
