--- a/src/app/inventory-form/inventory-form.page.html
+++ b/src/app/inventory-form/inventory-form.page.html
@@ -6,99 +6,88 @@
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <!-- <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="search"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="notifications-outline"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-      </ion-button>
-    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true">
-  <div class="form-group">
-   <ion-card><ion-card-content><h3 style=" width: 100%;  font-size: 100%; font-weight: bold; color: black;">{{ drugName }}</h3></ion-card-content></ion-card> 
-    <p style="font-style: italic; font-size: 100%; margin-left: 15px;">Please enter your details below. <span
-        style="color: #9e1c25;">*</span>Marked items are mandatory</p>
-    <ion-card>
-      <ion-card-content>
-        <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()" class="custom-form">
-          <div>
-            <ion-label position="floating" class="floating-label">Beginning Balance <span
-                class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="beginningBalance" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Received <span class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="received" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Dispensed<span class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="dispensed" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Losses <span class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="losses" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Positive Adjustment <span
-                class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="positiveAdjustment" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Negative Adjustment <span
-                class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="negativeAdjustment" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">
-              Ending Balance<span class="mandatory">*</span>
-            </ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="endingBalance" type="number" class="bordered-input" readonly="true"></ion-input>
-            </ion-item>
-          </div>          
-          <div>
-            <ion-label position="floating" class="floating-label">Quantity Requested <span
-                class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="quantityRequested" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Days Out Of Stock<span
-                class="mandatory">*</span></ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-input formControlName="daysOutOfStock" type="number" class="bordered-input"></ion-input>
-            </ion-item>
-          </div>
-          <div>
-            <ion-label position="floating" class="floating-label">Comments</ion-label>
-            <ion-item lines="none" class="input-container">
-              <ion-textarea formControlName="comments" class="large-textarea" placeholder="Enter your comments here...">
-              </ion-textarea>
-            </ion-item>
-          </div>
-          <ion-button expand="block" type="submit" [disabled]="!reactiveForm.valid"
-            style="margin-top: 25px;">SAVE</ion-button>
-        </form>
-      </ion-card-content>
-    </ion-card>
-  </div>
+
+<ion-content [fullscreen]="true" class="inventory-form-content">
+  <ion-card class="drug-info-card">
+    <ion-card-content>
+      <h3 class="drug-name">{{ drugName }}</h3>
+    </ion-card-content>
+  </ion-card>
+  
+  <p class="form-instructions">
+    Please enter your details below. 
+    <span class="mandatory-asterisk">*</span>Marked items are mandatory
+  </p>
+
+  <ion-card>
+    <ion-card-content>
+      <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()" class="custom-form">
+        
+        <!-- Beginning Balance -->
+        <ion-item lines="none">
+          <ion-label position="floating">Beginning Balance <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="beginningBalance" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Received -->
+        <ion-item lines="none">
+          <ion-label position="floating">Received <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="received" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Dispensed -->
+        <ion-item lines="none">
+          <ion-label position="floating">Dispensed <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="dispensed" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Losses -->
+        <ion-item lines="none">
+          <ion-label position="floating">Losses <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="losses" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Positive Adjustment -->
+        <ion-item lines="none">
+          <ion-label position="floating">Positive Adjustment <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="positiveAdjustment" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Negative Adjustment -->
+        <ion-item lines="none">
+          <ion-label position="floating">Negative Adjustment <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="negativeAdjustment" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Ending Balance -->
+        <ion-item lines="none">
+          <ion-label position="floating">Ending Balance <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="endingBalance" type="number" readonly="true"></ion-input>
+        </ion-item>
+
+        <!-- Quantity Requested -->
+        <ion-item lines="none">
+          <ion-label position="floating">Quantity Requested <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="quantityRequested" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Days Out Of Stock -->
+        <ion-item lines="none">
+          <ion-label position="floating">Days Out Of Stock <span class="mandatory">*</span></ion-label>
+          <ion-input formControlName="daysOutOfStock" type="number"></ion-input>
+        </ion-item>
+
+        <!-- Comments -->
+        <ion-item lines="none">
+          <ion-label position="floating">Comments</ion-label>
+          <ion-textarea formControlName="comments" placeholder="Enter your comments here..."></ion-textarea>
+        </ion-item>
+
+        <!-- Save Button -->
+        <ion-button expand="block" type="submit" [disabled]="!reactiveForm.valid" class="save-button">SAVE</ion-button>
+      </form>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
