--- a/src/app/inventory-item/inventory-item.page.html
+++ b/src/app/inventory-item/inventory-item.page.html
@@ -24,12 +24,14 @@
   <div class="fixed-header">
     <ion-card class="expand">
       <ion-card-header>
-        <ion-col>
-          <ion-card-title>{{ facilityName }}</ion-card-title>
-        </ion-col>
-        <ion-col class="ion-text-end date-col">
-          <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
-        </ion-col>
+        <ion-row>
+          <ion-col>
+            <ion-card-title>{{ facilityName }}</ion-card-title>
+          </ion-col>
+          <ion-col class="ion-text-end date-col">
+            <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
+          </ion-col>
+        </ion-row>
       </ion-card-header>
     </ion-card>
 
