--- a/src/app/national/national.page.html
+++ b/src/app/national/national.page.html
@@ -6,15 +6,9 @@
         <ion-icon name="home-sharp"></ion-icon>
         Home
       </ion-tab-button>
-      <ion-tab-button tab="programmes">
-      <ion-icon name="create-sharp"></ion-icon>     Programmes
-    </ion-tab-button>
-      <ion-tab-button tab="stock-reports">
-        <ion-icon name="bar-chart-sharp"></ion-icon>        Stock Reports
-      </ion-tab-button>
-      <!-- <ion-tab-button tab="helper">
-        <ion-icon name="information-circle-sharp"></ion-icon>        Help
-      </ion-tab-button> -->
+      <ion-tab-button tab="national-stock-reports">
+        <ion-icon name="bar-chart-sharp"></ion-icon>        Stock Summary
+      </ion-tab-button>     
       <ion-tab-button tab="profile" >
         <ion-icon name="settings-sharp"></ion-icon>        Settings
       </ion-tab-button>
