--- a/src/app/programmes/programmes.page.html
+++ b/src/app/programmes/programmes.page.html
@@ -10,17 +10,10 @@
       <ion-button (click)="toggleSearchBar()">
         <ion-icon name="search"></ion-icon>
       </ion-button>
-      <ion-button (click)="goToNotifications()">
-        <ion-icon name="notifications-outline" class="notification-icon"></ion-icon>
-        <span class="badge" *ngIf="newNotificationsCount > 0">{{ newNotificationsCount }}</span>
-      </ion-button>
       <ion-button (click)="toggleMenu()">
         <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
-  </ion-toolbar>
-  <ion-toolbar *ngIf="showSearchBar" color="light">
-    <ion-searchbar [(ngModel)]="searchQuery" (ionInput)="filterFacilities()"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
@@ -35,10 +28,10 @@
     </ion-card-header>
   </ion-card>
   <ion-card>
-  <ion-card-header>
-    <ion-row class="name">{{subcountyName}}</ion-row>
-  </ion-card-header>
-</ion-card>
+    <ion-card-header>
+      <ion-row class="name">{{subcountyName}}</ion-row>
+    </ion-card-header>
+  </ion-card>
   <ion-card>
     <ion-card-header>
       <ion-row>
@@ -46,27 +39,33 @@
         <ion-col>
           <ion-card-title class="heading-bold">Facility</ion-card-title>
         </ion-col>
-  
+
         <ion-col class="ion-text-end">
           <ion-card-title class="heading-bold" style="margin-right: 30px;">Status</ion-card-title>
         </ion-col>
       </ion-row>
     </ion-card-header>
     <ion-card-content>
+
+      <ion-toolbar *ngIf="showSearchBar" color="light">
+        <ion-searchbar [(ngModel)]="searchStatus" (ionInput)="filterFacilitiesByStatus()"
+          placeholder="Search by status"></ion-searchbar>
+      </ion-toolbar>
+
       <ion-list>
-        <ion-item *ngFor="let facility of facilities">
+        <ion-item *ngFor="let facility of filteredFacilities || facilities">
           <ion-label>
             {{ facility.facilityName }}
           </ion-label>
           <ion-label slot="end">
-            <div class="status-div" 
-                 [ngClass]="getStatusColor(facility.status)" 
-                 (click)="navigateToInventoryApproval({ programmeId: programmeId }, facility)">
+            <div class="status-div" [ngClass]="getStatusColor(facility.status)"
+              (click)="navigateToInventoryApproval({ programmeId: programmeId }, facility)">
               {{ facility.status }}
             </div>
           </ion-label>
-        </ion-item>      
+        </ion-item>
       </ion-list>
+      
     </ion-card-content>
   </ion-card>
 </ion-content>
