--- a/src/app/stock-reports/stock-reports.page.html
+++ b/src/app/stock-reports/stock-reports.page.html
@@ -18,7 +18,7 @@
       <ion-card-header class="no-border">
         <ion-row>
           <ion-col class="col-wrap">
-            <ion-card-title>{{ subcounty }}</ion-card-title>
+            <ion-card-title class="font">{{ subcounty }}</ion-card-title>
           </ion-col>
           <ion-col class="col-wrap ion-text-end date-col">
             <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
