--- a/src/app/login2/login2.page.scss
+++ b/src/app/login2/login2.page.scss
@@ -78,5 +78,9 @@
     height: 50vh; 
     background-color:#9e1c25; 
   }
+  .rounded-button {
+    border-radius: 30px;
+    height: 30px; 
+  }
   
   
