--- a/src/app/subhome/subhome.page.html
+++ b/src/app/subhome/subhome.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-title>Sub County Home</ion-title>
+    <ion-title>Home</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="toggleSearchBar()">
         <ion-icon name="search"></ion-icon>
